--- a/mcu-release-automation/McuReleaseSubmitApp/McuReleaseSubmitApp.csproj
+++ b/mcu-release-automation/McuReleaseSubmitApp/McuReleaseSubmitApp.csproj
@@ -36,11 +36,8 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="IntelDCGSpsWebService">
-      <HintPath>..\..\..\DcPaeWebService\IntelDCGSpsWebService\bin\IntelDCGSpsWebService.dll</HintPath>
-    </Reference>
     <Reference Include="log4net">
-      <HintPath>..\..\..\Lib\log4net.dll</HintPath>
+      <HintPath>..\Lib\log4net.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
