20200705_SmartConfig increase the max json size

--- a/mcu-release-automation/DcPaeWebService/IntelDCGSpsWebService/Web.config
+++ b/mcu-release-automation/DcPaeWebService/IntelDCGSpsWebService/Web.config
@@ -63,6 +63,16 @@
     </securityPolicy>
     <identity impersonate="false" />
   </system.web>
+  <system.web.extensions>
+    <scripting>
+      <webServices>
+        <!-- Update this value to change the value to 
+                    a larger value that can accommodate your JSON 
+                    strings -->
+        <jsonSerialization maxJsonLength="86753090" />
+      </webServices>
+    </scripting>
+  </system.web.extensions>
   <system.webServer>
     <modules>
       <remove name="FormsAuthenticationModule" />
