--- a/WordsValidation/DcPaeWebService/IntelDCGSpsWebService/Web.config
+++ b/WordsValidation/DcPaeWebService/IntelDCGSpsWebService/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -6,25 +6,25 @@
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-IntelDCGSpsWebService-20190113091825.mdf;Initial Catalog=aspnet-IntelDCGSpsWebService-20190113091825;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-IntelDCGSpsWebService-20190113091825.mdf;Initial Catalog=aspnet-IntelDCGSpsWebService-20190113091825;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
-    <add key="webpages:Version" value="3.0.0.0" />
-    <add key="webpages:Enabled" value="false" />
-    <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="ipmitoolPath" value="D:\IpmiTool-1.8.11.i4-win" />
-    <add key="ipmitoolErrorIgnoreFilter" value="(Timeout)|(Node busy)" />
-    <add key="ipmiCommandTimeoutInMin" value="3" />
-    <add key="owin:automaticappStartup" value="false" />
-    <add key="MicrocodeReleaseDefaultConfig" value="D:\Projects\DcPaeWebService\IntelDCGSpsWebService\App_Data\MicrocodeRelease_default.json" />
-    <add key="MicrocodeReleaseWorkingDirectory" value="D:\Projects\McuRelease\Dev\ReleaseAutomation" />
-    <add key="MicrocodeReleaseCommandlineFormat" value="-r {0} --worksheet {1} --user {2} --repo testing" />
-    <add key="MicrocodeReleaseRepoUserName" value="" />
+    <add key="webpages:Version" value="3.0.0.0"/>
+    <add key="webpages:Enabled" value="false"/>
+    <add key="ClientValidationEnabled" value="true"/>
+    <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <add key="ipmitoolPath" value="D:\IpmiTool-1.8.11.i4-win"/>
+    <add key="ipmitoolErrorIgnoreFilter" value="(Timeout)|(Node busy)"/>
+    <add key="ipmiCommandTimeoutInMin" value="3"/>
+    <add key="owin:automaticappStartup" value="false"/>
+    <add key="MicrocodeReleaseDefaultConfig" value="D:\Projects\DcPaeWebService\IntelDCGSpsWebService\App_Data\MicrocodeRelease_default.json"/>
+    <add key="MicrocodeReleaseWorkingDirectory" value="D:\Projects\McuRelease\Dev\ReleaseAutomation"/>
+    <add key="MicrocodeReleaseCommandlineFormat" value="-r {0} --worksheet {1} --user {2} --repo testing"/>
+    <add key="MicrocodeReleaseRepoUserName" value=""/>
     <add key="mcu_administrators" value="amr\liyingho;qamr\nehasaxe;amr\noralope"/>
   </appSettings>
   <!--
@@ -37,126 +37,126 @@
   -->
   <system.web>
     <authentication mode="Windows">
-      <forms requireSSL="true" />
+      <forms requireSSL="true"/>
     </authentication>
     <authorization>
-      <allow users="*" />
+      <allow users="*"/>
     </authorization>
-    <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" maxRequestLength="960000000" />
+    <compilation debug="true" targetFramework="4.8"/>
+    <httpRuntime targetFramework="4.5" maxRequestLength="960000000"/>
     <pages>
       <namespaces>
-        <add namespace="System.Web.Helpers" />
-        <add namespace="System.Web.Mvc" />
-        <add namespace="System.Web.Mvc.Ajax" />
-        <add namespace="System.Web.Mvc.Html" />
-        <add namespace="System.Web.Routing" />
-        <add namespace="System.Web.WebPages" />
-        <add namespace="Kendo.Mvc.UI" />
+        <add namespace="System.Web.Helpers"/>
+        <add namespace="System.Web.Mvc"/>
+        <add namespace="System.Web.Mvc.Ajax"/>
+        <add namespace="System.Web.Mvc.Html"/>
+        <add namespace="System.Web.Routing"/>
+        <add namespace="System.Web.WebPages"/>
+        <add namespace="Kendo.Mvc.UI"/>
       </namespaces>
     </pages>
     <securityPolicy>
-      <trustLevel name="Full" policyFile="internal" />
+      <trustLevel name="Full" policyFile="internal"/>
     </securityPolicy>
-    <identity impersonate="false" />
+    <identity impersonate="false"/>
   </system.web>
   <system.webServer>
     <modules>
-      <remove name="FormsAuthenticationModule" />
+      <remove name="FormsAuthenticationModule"/>
     </modules>
     <security>
       <requestFiltering>
         <!--The default size is 30000000 bytes (28.6 MB). MaxValue is 4294967295 bytes (4 GB)-->
         <!-- 100 MB in bytes -->
-        <requestLimits maxAllowedContentLength="209715200" />
+        <requestLimits maxAllowedContentLength="209715200"/>
       </requestFiltering>
     </security>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="v11.0" />
+        <parameter value="v11.0"/>
       </parameters>
     </defaultConnectionFactory>
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
   </entityFramework>
   <log4net>
     <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
-      <file value="IntelDCGSpsWebService.log" />
-      <threshold value="INFO" />
-      <appendToFile value="true" />
-      <rollingStyle value="Size" />
-      <maxSizeRollBackups value="10" />
-      <maximumFileSize value="10MB" />
-      <staticLogFileName value="true" />
+      <file value="IntelDCGSpsWebService.log"/>
+      <threshold value="INFO"/>
+      <appendToFile value="true"/>
+      <rollingStyle value="Size"/>
+      <maxSizeRollBackups value="10"/>
+      <maximumFileSize value="10MB"/>
+      <staticLogFileName value="true"/>
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%-5p %d - %m%n" />
+        <conversionPattern value="%-5p %d - %m%n"/>
       </layout>
     </appender>
     <appender name="ColoredConsoleAppender" type="log4net.Appender.ColoredConsoleAppender">
-      <threshold value="INFO" />
+      <threshold value="INFO"/>
       <filter type="log4net.Filter.LevelRangeFilter">
-        <levelMin value="INFO" />
-        <acceptOnMatch value="true" />
+        <levelMin value="INFO"/>
+        <acceptOnMatch value="true"/>
       </filter>
-      <filter type="log4net.Filter.DenyAllFilter" />
+      <filter type="log4net.Filter.DenyAllFilter"/>
       <mapping>
-        <level value="INFO" />
-        <foreColor value="Green, HighIntensity" />
+        <level value="INFO"/>
+        <foreColor value="Green, HighIntensity"/>
       </mapping>
       <mapping>
-        <level value="TRACE" />
-        <foreColor value="White" />
+        <level value="TRACE"/>
+        <foreColor value="White"/>
       </mapping>
       <mapping>
-        <level value="DEBUG" />
-        <foreColor value="Cyan, HighIntensity" />
+        <level value="DEBUG"/>
+        <foreColor value="Cyan, HighIntensity"/>
       </mapping>
       <mapping>
-        <level value="WARN" />
-        <foreColor value="Yellow, HighIntensity" />
+        <level value="WARN"/>
+        <foreColor value="Yellow, HighIntensity"/>
       </mapping>
       <mapping>
-        <level value="ERROR" />
-        <foreColor value="Red, HighIntensity" />
+        <level value="ERROR"/>
+        <foreColor value="Red, HighIntensity"/>
       </mapping>
       <mapping>
-        <level value="FATAL" />
-        <foreColor value="Purple, HighIntensity" />
+        <level value="FATAL"/>
+        <foreColor value="Purple, HighIntensity"/>
       </mapping>
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%message%newline" />
+        <conversionPattern value="%message%newline"/>
       </layout>
     </appender>
     <root>
-      <appender-ref ref="RollingLogFileAppender" />
-      <appender-ref ref="ColoredConsoleAppender" />
+      <appender-ref ref="RollingLogFileAppender"/>
+      <appender-ref ref="ColoredConsoleAppender"/>
     </root>
   </log4net>
 </configuration>
