--- a/mcu-release-automation/BuildingBlocks/DynamicConfigDemo/App.config
+++ b/mcu-release-automation/BuildingBlocks/DynamicConfigDemo/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<configSections>
 		<section name="ns2:SubmisssionParameterRoot" type="CustomSections.InlineXmlSection, CustomSections"/>
@@ -19,7 +19,7 @@
 		<MaxPathWithoutFileLength>247</MaxPathWithoutFileLength>
 		<GenerateReport>true</GenerateReport>
 		<SubmissionGroup>submissionclient@avertlabs.com</SubmissionGroup><!-- Monitored-->
-		<RequestedPriority>>generalsubmission</RequestedPriority>
+		<RequestedPriority>&gt;generalsubmission</RequestedPriority>
 		<DBFilePath>..\..\rcstdb.s3db</DBFilePath>
 		<ReportPath>.\</ReportPath>
 		<SubmissionProperties>
@@ -42,4 +42,4 @@
 			<string>OptionName2:OptionValue2</string>
 		</SampleProperties>
 	</ns2:SubmisssionParameterRoot>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup></configuration>
