--- a/mcu-release-automation/BuildingBlocks/SmartWebserviceProxyDemo/app.config
+++ b/mcu-release-automation/BuildingBlocks/SmartWebserviceProxyDemo/app.config
@@ -3,57 +3,32 @@
     <system.serviceModel>
         <bindings>
             <basicHttpBinding>
-                <binding name="BasicHttpBinding_ISampleSubmission" closeTimeout="00:01:00"
-                    openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
-                    allowCookies="false" bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
-                    maxBufferSize="65536" maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
-                    messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered"
-                    useDefaultWebProxy="true">
-                    <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
-                        maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+                <binding name="BasicHttpBinding_ISampleSubmission" closeTimeout="00:01:00" openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false" bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard" maxBufferSize="65536" maxBufferPoolSize="524288" maxReceivedMessageSize="65536" messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered" useDefaultWebProxy="true">
+                    <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384" maxBytesPerRead="4096" maxNameTableCharCount="16384"/>
                     <security mode="None">
-                        <transport clientCredentialType="None" proxyCredentialType="None"
-                            realm="" />
-                        <message clientCredentialType="UserName" algorithmSuite="Default" />
+                        <transport clientCredentialType="None" proxyCredentialType="None" realm=""/>
+                        <message clientCredentialType="UserName" algorithmSuite="Default"/>
                     </security>
                 </binding>
-                <binding name="CasperScanSoap" closeTimeout="00:01:00" openTimeout="00:01:00"
-                    receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false"
-                    bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
-                    maxBufferSize="65536" maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
-                    messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered"
-                    useDefaultWebProxy="true">
-                    <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
-                        maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+                <binding name="CasperScanSoap" closeTimeout="00:01:00" openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false" bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard" maxBufferSize="65536" maxBufferPoolSize="524288" maxReceivedMessageSize="65536" messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered" useDefaultWebProxy="true">
+                    <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384" maxBytesPerRead="4096" maxNameTableCharCount="16384"/>
                     <security mode="None">
-                        <transport clientCredentialType="None" proxyCredentialType="None"
-                            realm="" />
-                        <message clientCredentialType="UserName" algorithmSuite="Default" />
+                        <transport clientCredentialType="None" proxyCredentialType="None" realm=""/>
+                        <message clientCredentialType="UserName" algorithmSuite="Default"/>
                     </security>
                 </binding>
-                <binding name="BasicHttpBinding_IMetaDataService" closeTimeout="00:01:00"
-                    openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
-                    allowCookies="false" bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
-                    maxBufferSize="65536" maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
-                    messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered"
-                    useDefaultWebProxy="true">
-                    <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
-                        maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+                <binding name="BasicHttpBinding_IMetaDataService" closeTimeout="00:01:00" openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false" bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard" maxBufferSize="65536" maxBufferPoolSize="524288" maxReceivedMessageSize="65536" messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered" useDefaultWebProxy="true">
+                    <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384" maxBytesPerRead="4096" maxNameTableCharCount="16384"/>
                     <security mode="None">
-                        <transport clientCredentialType="None" proxyCredentialType="None"
-                            realm="" />
-                        <message clientCredentialType="UserName" algorithmSuite="Default" />
+                        <transport clientCredentialType="None" proxyCredentialType="None" realm=""/>
+                        <message clientCredentialType="UserName" algorithmSuite="Default"/>
                     </security>
                 </binding>
             </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://beaqaacme1/SSC_V3/Service1.svc" binding="basicHttpBinding"
-                bindingConfiguration="BasicHttpBinding_ISampleSubmission"
-                contract="SSCClient.ISampleSubmission" name="UATEndpoint_1" />
-            <endpoint address="http://beadv1ssc1/SSC_V3/Service1.svc" binding="basicHttpBinding"
-                bindingConfiguration="BasicHttpBinding_ISampleSubmission"
-                contract="SSCClient.ISampleSubmission" name="UATEndpoint_2" />
+            <endpoint address="http://beaqaacme1/SSC_V3/Service1.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISampleSubmission" contract="SSCClient.ISampleSubmission" name="UATEndpoint_1"/>
+            <endpoint address="http://beadv1ssc1/SSC_V3/Service1.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISampleSubmission" contract="SSCClient.ISampleSubmission" name="UATEndpoint_2"/>
             <!--<endpoint address="http://beaav1appssc06/SSC_V3/Service1.svc"
                 binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISampleSubmission"
                 contract="SSCClient.ISampleSubmission" name="ProductionEndpoint06" />
@@ -68,4 +43,4 @@
                 contract="MetadatServiceClient.IMetaDataService" name="BasicHttpBinding_IMetaDataService" />-->
         </client>
     </system.serviceModel>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup></configuration>
