--- a/mcu-release-automation/BuildingBlocks/ConfigurationMergeDemo/SwitchConfigOnFly/app.config
+++ b/mcu-release-automation/BuildingBlocks/ConfigurationMergeDemo/SwitchConfigOnFly/app.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <configuration>
 	<configSections>
 		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net"/>
@@ -10,7 +10,7 @@
 		<root>
 			<level value="INFO"/>
 			<appender-ref ref="ColoredConsoleAppender"/>
-			<appender-ref ref="RollingFileAppender" />
+			<appender-ref ref="RollingFileAppender"/>
 		</root>
 		<appender name="ColoredConsoleAppender" type="log4net.Appender.ColoredConsoleAppender">
 			<threshold value="Info"/>
@@ -45,23 +45,23 @@
 		</appender>
 
 		<appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
-			<file value="SwitchConfigOnFly.log" />
-			<appendToFile value="true" />
-			<rollingStyle value="Size" />
-			<maxSizeRollBackups value="20" />
-			<maximumFileSize value="100000KB" />
-			<staticLogFileName value="true" />
+			<file value="SwitchConfigOnFly.log"/>
+			<appendToFile value="true"/>
+			<rollingStyle value="Size"/>
+			<maxSizeRollBackups value="20"/>
+			<maximumFileSize value="100000KB"/>
+			<staticLogFileName value="true"/>
 			<layout type="log4net.Layout.PatternLayout">
-				<conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
+				<conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline"/>
 			</layout>
 		</appender>
 		<logger name="Avert.Common.MailHandler">
-			<level value="Off" />
+			<level value="Off"/>
 		</logger>
 
 	</log4net>
 	<startup useLegacyV2RuntimeActivationPolicy="true">
-		<supportedRuntime version="v4.0"/>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
 	</startup>
 
 </configuration>
